--- a/profile/profile.css
+++ b/profile/profile.css
@@ -22,8 +22,9 @@
     font-weight: bold;
     text-align: start;
   }
-  .uma12{
+  .uma120{
      background: #F8F2FB;
+     height: 400vh;
     
   }
   .fresher{
@@ -214,3 +215,4 @@ font-weight: bold;
   height: 300px;
   width: 650px;
 }
+
